@@ -1,0 +1,63 @@
+/* vi: set sw=4 ts=4 sts=4: */
+/*
+ *	utils.c -- System Utilities 
+ *
+ *	Copyright (c) Ralink Technology Corporation All Rights Reserved.
+ *
+ *	$Id: utils.c,v 1.99.2.1 2009-04-08 08:52:59 chhung Exp $
+ */
+
+#include	"led.h"
+
+/*
+ * configure LED blinking with proper frequency (privatly use only)
+ *   on: number of ticks that LED is on
+ *   off: number of ticks that LED is off
+ *   blinks: number of on/off cycles that LED blinks
+ *   rests: number of on/off cycles that LED resting
+ *   times: stop blinking after <times> times of blinking
+ * where 1 tick == 100 ms
+ */
+static int gpioLedSet(int gpio, unsigned int on, unsigned int off,
+		unsigned int blinks, unsigned int rests, unsigned int times)
+{
+	int fd;
+	ralink_gpio_led_info led;
+
+	//parameters range check
+	if (gpio < 0 || gpio >= RALINK_GPIO_NUMBER ||
+			on > RALINK_GPIO_LED_INFINITY ||
+			off > RALINK_GPIO_LED_INFINITY ||
+			blinks > RALINK_GPIO_LED_INFINITY ||
+			rests > RALINK_GPIO_LED_INFINITY ||
+			times > RALINK_GPIO_LED_INFINITY) {
+		return -1;
+	}
+	led.gpio = gpio;
+	led.on = on;
+	led.off = off;
+	led.blinks = blinks;
+	led.rests = rests;
+	led.times = times;
+
+	fd = open(GPIO_DEV, O_RDONLY | O_NONBLOCK);
+	if (fd < 0) {
+		perror(GPIO_DEV);
+		return -1;
+	}
+	if (ioctl(fd, RALINK_GPIO_LED_SET, &led) < 0) {
+		perror("ioctl");
+		close(fd);
+		return -1;
+	}
+	close(fd);
+	return 0;
+}
+
+int ledAlways(int gpio, int on)
+{
+	if (on)
+		return gpioLedSet(gpio, RALINK_GPIO_LED_INFINITY, 0, 1, 1, RALINK_GPIO_LED_INFINITY);
+	else
+		return gpioLedSet(gpio, 0, RALINK_GPIO_LED_INFINITY, 1, 1, RALINK_GPIO_LED_INFINITY);
+}
